<resources>
    <string name="app_name">MusicOfflineKotlin</string>
    <string name="channel_name">Notification channel</string>
    <string name="channel_description">Notification channel music</string>
    <string name="dialog_box">Thông báo</string>
    <string name="btn_ok">Đồng ý</string>
    <string name="lbl_loading">Vui lòng chờ</string>
    <string name="lbl_home">Trang chủ</string>
    <string name="lbl_library">Thư viện</string>
    <string name="lbl_search">Tìm kiếm</string>
    <string name="lbl_recommended_to_you">Đề Xuất Cho Bạn</string>
    <string name="lbl_my_playlist">Danh Sách Nhạc Của Tôi</string>
    <string name="lbl_playing_mussic">Trình Phát Nhạc</string>
    <string name="lbl_erro_song">Bài hát không tồn tại</string>
    <string name="lbl_lyrics_null">Không Tìm Thấy Lời Bài Hát</string>
    <string name="search_hint1">Tìm bài hát, playlist</string>
    <string name="lbl_recent_searches">Các tìm kiếm gần đây</string>
    <string name="lbl_delete_history">Xóa Các Tìm Kiếm</string>
    <string name="lbl_song">Bài hát</string>
    <string name="lbl_album">Album</string>
    <string name="lbl_play_list">Danh sách phát</string>
    <string name="lbl_like">Yêu thích</string>
    <string name="lbl_all">Tất cả</string>
    <string name="lbl_play_random">Phát ngẫu nhiên</string>
    <string name="lbl_add_playlist">Thêm vào playlist</string>
    <string name="lbl_add_favorite">Thêm vào yêu thích</string>
    <string name="lbl_delete">Xóa</string>
    <string name="lbl_off_random">Tắt Phát Ngẫu Nhiên</string>
    <string name="lbl_favorite">Bài Hát Yêu Thích</string>
</resources>